--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -44,10 +44,9 @@ p {
     display: table;
     width: 100%;
     height: auto;
-    padding: 100px 0;
+    padding: 14% 0;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
     background-color: gray;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -70,7 +69,7 @@ p {
 
 @media(min-width:767px) {
     .intro {
-        height: 100%;
+        height: 70%;
         padding: 0;
     }
 
