--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -27,7 +27,7 @@ h4,
 h5,
 h6 {
     margin: 0 0 35px;
-    /*text-transform: uppercase;*/
+    /*text-transform: uppercase;*/ 
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
     letter-spacing: 1px;
@@ -94,6 +94,7 @@ p {
 /* Styles for the Top Bar  ============================================================================= */
 
 /*Search styles*/
+/*
 .form-control {
     text-align: center;
 }
@@ -106,12 +107,13 @@ p {
     display: table;
 }
 /**/
-
+/*
 p {
     margin: 0 0 25px;
     font-size: 18px;
     line-height: 1.5;
 }
+
 
 @media(min-width:767px) {
     p {
@@ -120,7 +122,7 @@ p {
         font-size: 14px;
         line-height: 1.6;
     }
-}
+} 
 
 a {
     color: black;
@@ -177,7 +179,7 @@ a:focus {
 
 @media(min-width:800px) {
     .navbar {
-        padding: 20px 0;
+        padding: 20px 0; 
         border-bottom: 0;
         letter-spacing: 1px;
         background: 0 0;
@@ -194,27 +196,58 @@ a:focus {
     .navbar-custom.top-nav-collapse {
         border-bottom: 1px solid rgba(255,255,255,.3);
     }
-}
+} 
 
 .container {
    width: auto;
 /*  max-width: 880px;
-*/ padding: 0 15px;
+*/ 
+/*padding: 0 15px;
 padding-left: 35px;
-}
+} 
 
 @media(min-width:767px){
     .container{
         margin: 0px 50px;
 
     }
-}
+} 
 
 .container .credit {
   margin: 20px 0;
 }
+*/
 
+.navbar {
+	border-radius: 0;
+} 
+.container > .navbar-header {
+	margin-right: 0px;
+	margin-left: 0px;
+}
 
+.container {
+	width:auto;
+	padding-left: 15px;
+	margin-top: 10px;
+}
+
+.navbar-form {
+	border: none;
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: 0;
+	margin-right:0;
+	padding-top: 0;
+	padding-bottom: 0;
+	padding-left: 0;
+	padding-right: 0;
+}
+
+.input-group {
+	width: 200px;
+	
+}
 
 /*  SECTIONS  ============================================================================= */
 
