--- a/client/views/home/search.html
+++ b/client/views/home/search.html
@@ -1,14 +1,12 @@
 <template name ="search">
-
-	<div style ="display: inline-table">
-		<div class="input-group-btn">
-			<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+	
+	<form class="navbar-form" role="search">
+		<div class="input-group">
+			<input type="text" class="form-control" placeholder="Search Communify" name="srch-term" id="srch-term">
+				<div class="input-group-btn">
+					<button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+				</div>
 		</div>
-		<form class="navbar-form" role="search">
-			<div class="input-group">
-				<input type="text" class="form-control" placeholder="search communify" name="srch-term" id="srch-term">
-			</div>
-		</form>
-	</div>	
+	</form>
 
 </template>
