--- a/client/views/home/topBar.html
+++ b/client/views/home/topBar.html
@@ -12,7 +12,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="example-navbar-collapse">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="#">Sign In</a></li>
+					{{> loginButtons }}
 					</ul> 
 			</div>
 		</div>
