--- a/client/views/listings/listingsList.html
+++ b/client/views/listings/listingsList.html
@@ -1,17 +1,17 @@
-<template name ="application">
+<template name ="listingsList">
 	
 	<div class="section group" style = "list-style: none">
 		<div class="col span_1_of_4">
 			<h3 class ="titles">For Sale</h3>
 			{{#each forSale}}
-			  {{> listingItem}}
+			  {{> listing}}
 			{{/each}}
 			
 		</div>
 		<div class="col span_1_of_4">
 			<h3 class ="titles">Housing</h3>
 			{{#each housing}}
-			  {{> listingItem}}
+			  {{> listing}}
 			{{/each}}
 
 
@@ -19,13 +19,13 @@
 		<div class="col span_1_of_4">
 			<h3 class ="titles">Community</h3>
 			{{#each community}}
-			  {{> listingItem}}
+			  {{> listing}}
 			{{/each}}
 		</div>
 		<div class="col span_1_of_4">
 			<h3 class ="titles">Jobs</h3>
 			{{#each jobs}}
-			  {{> listingItem}}
+			  {{> listing}}
 			{{/each}}
 		</div>
 	</div>
