--- a/client/views/home/home.html
+++ b/client/views/home/home.html
@@ -1,6 +1,6 @@
 <template name = "home">
 
-   {{> topBar}}
+   <!-- {{> topBar}} -->
 
     <section class="intro">
         <div class="intro-body">
