--- a/client/views/listings/layout.html
+++ b/client/views/listings/layout.html
@@ -1,7 +1,10 @@
 <template name="layout">
 	<!-- <div class="container"> -->
 		<!-- <div id="main"> -->
+	    {{>topBar}}	
 			{{> yield}}
 		<!-- </div> -->
 	<!-- </div> -->
 </template>
+
+<!-- I'm pretty sure yield is used to tell meteor where to render stuff -->
