set up listingPage

--- a/client/views/listings/listingPage.html
+++ b/client/views/listings/listingPage.html
@@ -1,7 +1,10 @@
 <template name="listingPage">
+{{#each listingItem}}
+
+  <h1> {{category}}</h1>
+  <h2> {{title}} </h2>
   
-   
-{{title}}
 
 
+{{/each}}
 </template>
