--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -4,6 +4,11 @@
   <h1> {{category}}</h1>
   <h2> {{title}} </h2>
   
+  <ul class="comments">
+    <!-- {{#each comments}} -->
+      {{> comment}}
+    <!-- {{/each}} -->
+  </ul>
 
 
 {{/each}}
