posts in listingPage

--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -4,12 +4,10 @@
   <h1> {{category}}</h1>
   <h2> {{title}} </h2>
   
-  <ul class="comments">
-    <!-- {{#each comments}} -->
-      {{> comment}}
-    <!-- {{/each}} -->
-  </ul>
+  {{>postsList}}
 
 
 {{/each}}
+
+
 </template>
