--- a/client/views/home/topSection/home.html
+++ b/client/views/home/topSection/home.html
@@ -1,6 +1,6 @@
 <template name = "home">
 
-   <!-- {{> topBar}} -->
+   {{> topBar}}
 
     <section class="intro">
         <div class="intro-body">
@@ -28,6 +28,6 @@
         </div>
     </section>
 
-    {{> listingsList}}
+    {{> application}}
 
 </template> 
