--- a/client/views/home/topSection/home.html
+++ b/client/views/home/topSection/home.html
@@ -1,6 +1,6 @@
 <template name = "home">
 
-   {{> topBar}}
+   <!-- {{> topBar}} -->
 
     <section class="intro">
         <div class="intro-body">
@@ -10,24 +10,14 @@
                         <h1 class="brand-heading">Communify</h1>
                         <p class="intro-text">Centering the community</p>
                         
-                        <form id="FORM_1">
-	<div id="DIV_2">
-		<input type="email" id="INPUT_3" placeholder="School email" />
-	</div>
-	<div id="DIV_4">
-		<input type="password" id="INPUT_5" placeholder="Password" /><br id="BR_6" /><br id="BR_7" />
-		<input type="submit" id="INPUT_16" value="Sign Up" />
-	</div>
-	<h6 id="H6_17">
-		 <a id="A_18" href="#">Terms of Use |</a> <a id="A_19" href="#">Privacy Policies</a>
-	</h6>
-</form>
+						{{> signUp}}
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    {{> application}}
+	{{> listingsList}} 
+   <!-- {{> application}} -->
 
 </template> 
