installing sexiness to listingPage

--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -1,13 +1,50 @@
 <template name="listingPage">
 {{#each listingItem}}
 
-  <h1> {{category}}</h1>
-  <h2> {{title}} </h2>
-  
-  {{>postsList}}
 
+<div id="masthead">  
+  <div class="container">
+      <div class="row">
+        <div class="col-md-7">
+          <h1> Communify Penn
+          </h1>
+        </div>
+      </div> 
+  </div><!--/container-->
+</div><!--/masthead-->
+
+<!--main-->
+<div class="container">
+	<div class="row">
+      <!--left-->
+      <div class="col-md-3" id="leftCol">
+        <ul class="nav nav-stacked" id="sidebar">
+          <h3 class= "sidebarHeader"> CATEGORIES LIST </h3>
+          <li><a href="#sec0">For Sale</a></li>
+          <li><a href="#sec1">Housing</a></li>
+          <li><a href="#sec2">Community</a></li>
+          <li><a href="#sec3">Jobs</a></li>
+        </ul>
+      </div><!--/left-->
+      
+      <!--right-->
+      <div class="col-md-9">
+        <h2 id="sec1"> 
+          <div class="listingPageHeader">
+           <div style= "text-transform:capitalize">{{category}} </div> 
+           <div class="smallListings"> &nbsp; listings &nbsp;</div>
+           -> {{title}} </div>
+        </h2>
+        <p>
+          {{>postsList}}
+        </p>
+  
+        </div><!--/right-->
+  	</div><!--/row-->
+</div><!--/container-->
 
 {{/each}}
 
 
 </template>
+
