--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -11,9 +11,7 @@ body {
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    color: #fff;
-    background-color: #000;
-    
+    color: black;
 }
 
 html {
@@ -488,13 +486,50 @@ padding-left: 35px;
 
 
 #A_5 {
-	color:white;
+	color: black;
 }
 
 
 
 
 /* Styling for post page===========================================*/
+#sidebar {
+  background-color: rgb(239,239,239);
+}
+@media(max-width: 998px) {
+  #sidebar {
+    text-align: center;
+  }
+  .sidebarHeader {
+    text-align: center;
+  }
+}
+
+.sidebarHeader {
+    box-sizing: border-box;
+    color: rgb(51, 51, 51);
+    height: 40px;
+    text-transform: uppercase;
+    font: normal normal bold 20px/40px traditionellsans, Helvetica, Arial, sans-serif;
+    margin: 0px;
+    
+} 
+
+.listingPageHeader {
+  display: -webkit-inline-box;
+  color: rgb(26,41,119);
+  border-bottom: 1px;
+  border-bottom-style: inset;
+  border-top-style: outset; 
+}
+
+.smallListings {
+font-size: 16px;
+padding-top: 12px;
+}
+
+
+
 .grid-block, .main, .post, .comments li, .comment-form {
   background: #fff;
   -webkit-border-radius: 3px;
