--- a/client/views/home/topSection/home.html
+++ b/client/views/home/topSection/home.html
@@ -7,8 +7,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Communify</h1>
-                        <p class="intro-text">Centering the community</p>
+                        <h1 class="brand-heading">communify <i class ="Penn">Penn</i></h1>
+                        <p class="intro-text">Centering the Penn community</p>
                         
 						{{> signUp}}
                     </div>
