--- a/client/views/listings/listingPage/listingPageHeader.html
+++ b/client/views/listings/listingPage/listingPageHeader.html
@@ -1,18 +1,19 @@
 <template name = "listingPageHeader">
-<div id="masthead">  
-  <div class="container">
+  <div id="masthead">  
+    <div class="container">
       <div class="row">
         <div class="col-md-7">
           <h1> Communify Penn
           </h1>
-        
-      {{#if currentUser}}
-            <li class="{{activeRouteClass 'postSubmit'}}">
-              <a href="{{pathFor 'postSubmit'}}">Submit Post</a>
-            </li>
-      {{/if}}
-      </div> 
+        </div> 
+         {{#if currentUser}}
+          <li class="{{activeRouteClass 'postSubmit'}} submitPost">
+            <button type="button" class="btn btn-success btn-lg">
+            <span class="glyphicon glyphicon-plus"></span><a href="{{pathFor 'postSubmit'}}"> Submit Listing </a>
+            </button>
+          </li>
+          {{/if}}
       </div>
-  </div><!--/container-->
-</div><!--/masthead-->
+    </div><!--/container-->
+  </div><!--/masthead-->
 </template>
