--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -359,7 +359,7 @@ padding-left: 35px;
 	
 }
 
-@media (min-width: 500px)  {
+@media (min-width: 400px)  {
     .navbar-header {
         float: left;
     }
@@ -376,20 +376,27 @@ padding-left: 35px;
         overflow: visible!important;
     }
     .navbar-nav {
-        float: left;
+        float: right;
 		margin: 0;
 	}
 	.navbar-nav>li {
-        float: left;
+        float: right;
     }
     .collapse.in{
   		display:none;
 	}
+	
+	
+	
 }
 
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
  border-color: transparent;
 }
+.container {
+	padding-right: 0px; 
+}
+
 
 /*  SECTIONS  ============================================================================= */
 
@@ -438,7 +445,7 @@ padding-left: 35px;
 	}
 }
 
-/*  GRID OF FOUR   ============================================================================= */
+/*  POSTINGS- GRID OF FOUR   ============================================================================= */
 
 
 .span_4_of_4 {
@@ -455,13 +462,26 @@ padding-left: 35px;
 
 .span_1_of_4 {
 	width: 23.8%; 
-  border-right-style: dotted;
-  border-color: gray;
-  border-width: 1px;
+	border-right-style: dotted;
+	border-color: gray;
+	border-width: 1px;
+	height: 420px;
+}
+#col_4 {
+	border-right-style: none;
 }
 
-
 /*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+.titles {
+	text-align: center;
+	white-space:nowrap;
+	border-bottom-style: dotted;
+	border-bottom-color: gray;
+	border-width: 1px;
+	margin-bottom: 10px;
+	margin-left: -9px;
+	padding-bottom: 3px;
+}
 
 @media only screen and (max-width: 480px) {
 	.span_4_of_4 {
@@ -474,22 +494,34 @@ padding-left: 35px;
 		width: 100%; 
 	}
 	.span_1_of_4 {
-		width: 100%; 
+		width: 100%;
+		border-right-style: none;
+		height: auto; 	
 	}
 	#LI_1 {
 		text-align: center;
 	}
+	.titles {
+		font-size:30px;
+		margin-left: 0px;
+		background-color: rgb(239,239,239);
+		border-bottom-style: none;
+	}
 }
 
-.titles {
-	text-align: center;
-	white-space:nowrap;
-  border-bottom-style: dotted;
-  
-  border-bottom-color: gray;
-  border-width: 1px;
+	
+@media only screen and (max-width: 646px) and (min-width: 481px) {
+	.span_1_of_4 {
+		height:450px;
+	}
 }
 
+@media only screen and (max-width: 570px) and (min-width: 481px) {
+	.titles {
+		font-size: 20px;
+	}
+	
+}
 
 #LI_1 {
 	color:white;
@@ -502,7 +534,54 @@ padding-left: 35px;
 	color: rgb(26,41,119);
 }
 
+    /*  FOOTER- GRID OF TWO   ============================================================================= */
+.footer_container {
+	background-color: #428bca;
+}
+.footer_title {
+	text-align: center;
+	font-size:25px;
+	font-weight: bold;
+	
+	
+}
+.span_2_of_2 {
+	width: 100%;
+}
 
+.span_1_of_2 {
+	width: 49.2%;
+}
+
+#links {
+	color:white;
+}
+
+/*  GO FULL WIDTH AT LESS THAN 480 PIXELS */
+
+@media only screen and (max-width: 480px) {
+	
+	.span_2_of_2 {
+		width: 100%; 
+		
+	}
+	.span_1_of_2 {
+		width: 100%; 
+		margin-bottom: -15px;
+	}
+	
+	#footer_links {
+		text-align: justify;
+	}
+	.footer_container {
+		height:175px;
+	}
+}
+
+
+#footer_links {
+	list-style-type:none;
+}
 
 
 /* Styling for post page===========================================*/
@@ -629,6 +708,7 @@ border-color: #eed3d7;
     display: block;
     float: right;
     margin-top: 7px; }
+    
 
 
 
