--- a/client/views/home/listingsSection/listingsList.html
+++ b/client/views/home/listingsSection/listingsList.html
@@ -22,7 +22,7 @@
 			  {{> listing}}
 			{{/each}}
 		</div>
-		<div class="col span_1_of_4">
+		<div class="col span_1_of_4" id="col_4">
 			<h3 class ="titles">Jobs</h3>
 			{{#each jobs}}
 			  {{> listing}}
