I like classify. Thought of it early today too

--- a/client/views/listings/listingPage/listingPageHeader.html
+++ b/client/views/listings/listingPage/listingPageHeader.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7">
-          <h1> Communify Penn
+          <h1> classify Penn
           </h1>
         </div> 
          {{#if currentUser}}
