--- a/client/views/listings/postPage/leftBarPostPage.html
+++ b/client/views/listings/postPage/leftBarPostPage.html
@@ -1,4 +1,4 @@
-<template name ="leftBar">
+<template name ="leftBarPostPage">
 <!--left-->
       <div class="col-md-3" id="leftCol">
         <ul class="nav nav-stacked" id="sidebar">
@@ -10,4 +10,4 @@
         </ul>
       </div><!--/left-->
       
-</template>      
+</template> 
