--- a/client/views/listings/postPage/postPage.html
+++ b/client/views/listings/postPage/postPage.html
@@ -1,7 +1,11 @@
 <template name="postPage">
-  
+{{> leftBarPostPage}}
+
   {{> postItem}}
-  
+
+
+
+{{stats}}
 </template>
 
 <!-- do something with 'if user then edit this post' -->
