--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -8,7 +8,7 @@
 <div class="container">
 	<div class="row">
    
-      {{>leftBar}}
+      {{>leftBarListingPage}}
    
       <!--right-->
       <div class="col-md-9">
