I don’t know if this is messed up

--- a/client/views/home/topSection/signUp.html
+++ b/client/views/home/topSection/signUp.html
@@ -1,5 +1,6 @@
 <template name = "signUp">
-	<div class="container">
+	{{>entrySignUp}}	
+	<!-- <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
             
@@ -11,5 +12,5 @@
             </form>
         </div>
     </div>
-</div>
+</div> -->
 </template>
