--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,3 +1,33 @@
+/* Sticky footer */
+
+
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 80%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
+}
+
+/* Set the fixed height of the footer here */
+#footer {
+  height: 60px;
+  background-color: #f5f5f5;
+}
+
+/* Lastly, apply responsive CSS fixes as necessary */
+@media (max-width: 767px) {
+#footer {
+  margin-left: -20px;
+  margin-right: -20px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+}
+
+
 /*Base styles =======================================*/
 #iron-router-progress {
     background-color : rgb(25,109,182);
@@ -199,6 +229,15 @@ body {
 }
 #login-buttons {
 	padding-right: 15px;
+}
+@media(max-width:425px) {
+	#login-name-link {
+		font-size: 12px;
+	}
+}
+
+.navbar-right {
+	padding-top: 5px;
 }
 
 /* Styles for the Top Bar  ============================================================================= */
@@ -575,6 +614,9 @@ padding-left: 35px;
 	}
 	.footer_container {
 		height:175px;
+	}
+	#wrap {
+		min-height: 73%;
 	}
 }
 
