--- a/client/views/listings/postSubmit/postSubmit.html
+++ b/client/views/listings/postSubmit/postSubmit.html
@@ -1,6 +1,6 @@
 <template name="postSubmit">
+{{postContext}}
   <form class="main">
-    
     <div class="control-group">
         <label class="control-label" for="title">Title of Post</label>
         <div class="controls">
