--- a/client/views/listings/postPage/postItemPostPage.html
+++ b/client/views/listings/postPage/postItemPostPage.html
@@ -1,9 +1,8 @@
 <template name="postItemPostPage">
 	<div class="post">
 		<div class="post-content">
-			<h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
+			<h3><a href="{{url}}">{{title}}</a></h3>
 			{{authors}}, {{category}}, {{price}}, {{description}}
 		</div>
-		<a href="{{pathFor 'postPage'}}" class="discuss btn">Discuss</a>
 	</div>
 </template>
