--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -14,9 +14,9 @@
       <div class="col-md-9">
         <h2 id="sec1"> 
           <div class="listingPageHeader">
-           <div style= "text-transform:capitalize">{{category}} </div> 
-           <div class="smallListings"> &nbsp; listings &nbsp;</div>
-           -> {{title}} </div>
+           <div style= "text-transform:capitalize">Latest Listings in</div> 
+           <div class="smallListings">&nbsp;</div>
+		   	 {{title}} </div> 
         </h2>
         <p>
           {{>postsList}}
