--- a/client/views/listings/listingPage/topBarListingPage.html
+++ b/client/views/listings/listingPage/topBarListingPage.html
@@ -2,19 +2,12 @@
     
 	<nav class="navbar navbar-default" role="navigation">
 		<div class = "container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#example-navbar-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				{{>search}}	edit for listingPage	
+			<div class="navbar-header-listingPage">
+				<a href="{{pathFor 'home'}}"> classify Penn </a>
 			</div>
-			<div class="collapse navbar-collapse" id="example-navbar-collapse">
-				<ul class="nav navbar-nav navbar-right">
-					{{> loginButtons }}
-					</ul> 
-			</div>
+			<div class="nav navbar-nav navbar-right" id="listingPage">
+				{{> loginButtons }}
+			</div> 
 		</div>
    </nav>
     
