trying to paginate

--- a/client/views/listings/listingPage/postsList.html
+++ b/client/views/listings/listingPage/postsList.html
@@ -1,7 +1,13 @@
 <template name="postsList">
-  <div class="posts">
+  {{> postsPaging}}
+  <div class="posts"> 
     {{#each posts}}
       {{> postItem}}
     {{/each}}
   </div>
 </template>
+
+
+
+
+
