--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -1,4 +1,5 @@
 <template name="listingPage">
+
 {{#each listingItem}}
 
 
@@ -31,3 +32,7 @@
 {{/each}}
 </template>
 
+<template name="postsPaging">
+    {{> pages}}
+    {{> pagesNav}}  <!--Bottom navigation-->
+</template>
