--- a/client/views/home/topSection/signUp.html
+++ b/client/views/home/topSection/signUp.html
@@ -1,16 +1,83 @@
 <template name = "signUp">
-	{{>entrySignUp}}	
-	<!-- <div class="container">
+	<div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-4 well well-sm">
-            
-            <form action="#" method="post" class="form" role="form">
-            <input class="form-control" name="youremail" placeholder="School Email" type="email" />
-            <input class="form-control" name="password" placeholder="Password" type="password" />
-            <button class="btn btn-lg btn-primary btn-block" type="submit">
-                Sign up</button>
-            </form>
+      {{#if logo}}
+        <div class="entry-logo">
+            <a href="/"><img src="{{logo}}" alt="logo"></a>
         </div>
+      {{/if}}
+      <div class="entry col-md-4 col-md-offset-4">
+        {{#if otherLoginServices}}  
+          <div class="entry-social">
+            {{#each loginServices}}
+              {{> entrySocial}}
+            {{/each}}
+            {{#if passwordLoginService}}
+              <div class="email-option">
+                <strong class="line-thru">OR</strong>
+                <a data-toggle="collapse" href="#signUp">
+                  {{t9n "signUpWithYourEmailAddress"}}
+                </a>
+              </div>
+            {{/if}}
+          </div>
+        {{else}}
+            
+        {{/if}}
+        {{> entryError}}
+        {{#if passwordLoginService}}
+          <form class="entry-form {{signupClass}}" id='signUp'>
+            {{#if showUsername}}
+              <div class="form-group">
+                <label>{{t9n "username"}}</label>
+                <input autofocus name="username" type="string" class="form-control" value=''>
+              </div>
+            {{/if}}
+
+            {{#if showEmail}}
+              <div class="form-group">
+                
+                {{#if showUsername}}
+                  <input type="email" class="form-control" value='{{emailAddress}}' placeholder="School Email">
+                {{else}}
+                  <input autofocus type="email" class="form-control" value='{{emailAddress}}' placeholder="School Email">
+                {{/if}}
+              </div>
+            {{/if}}
+
+            <div class="form-group">
+              
+              <input type="password" class="form-control" value='' placeholder="Password">
+            </div>
+
+            {{#if showSignupCode}}
+              <div class="form-group">
+                <label>{{t9n "signupCode"}}</label>
+                <input name="signupCode" type="string" class="form-control" value=''>
+              </div>
+            {{/if}}
+
+            <button type="submit" class="submit btn btn-block btn-default">{{t9n "signUp"}}</button>
+          </form>
+          <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="/sign-in">{{t9n "signin"}}</a>.</p>
+        {{/if}}
+        {{#if both}}
+          <p class="entry-agreement">{{t9n "clickAgree"}}
+            <a href="{{privacyUrl}}">{{t9n "privacyPolicy"}}</a> {{t9n "and"}}
+            <a href="{{termsUrl}}">{{t9n "terms"}}</a>.
+          </p>
+        {{else}}
+          {{#unless neither}}
+            <p class="entry-agreement">{{t9n "clickAgree"}}
+              {{#if privacyUrl}}<a href="{{privacyUrl}}">{{t9n "privacyPolicy"}}</a>.{{/if}}
+              {{#if termsUrl}}<a href="{{termsUrl}}">{{t9n "terms"}}</a>.{{/if}}
+            </p>
+          {{/unless}}
+        {{/if}}
+      </div>
     </div>
-</div> -->
+  </div>
+
+
 </template>
+
