working my friend

--- a/client/views/home/topSection/signUp.html
+++ b/client/views/home/topSection/signUp.html
@@ -57,7 +57,7 @@
               </div>
             {{/if}}
 
-            <button type="submit" class="submit btn btn-block btn-default">{{t9n "signUp"}}</button>
+            <button type="submit" class="submit btn btn-block btn-default">Sign Up</button>
           </form>
           <p class="entry-signin-cta">{{t9n "ifYouAlreadyHaveAnAccount"}} <a href="/sign-in">{{t9n "signin"}}</a>.</p>
         {{/if}}
