--- a/client/views/home/topSection/home.html
+++ b/client/views/home/topSection/home.html
@@ -1,7 +1,14 @@
-<template name = "home">
-
+<template name = "home">	
     <section class="intro">
         <div class="intro-body">
+        	<div class = "container">
+			<div class="navbar-header">
+				{{>search}}		
+			</div>
+			<ul class="nav navbar-nav navbar-right">
+				{{> loginButtons }}
+			</ul> 	
+		</div>
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
