--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,8 +1,10 @@
-/* SIGN UP BUTTON STYLING */
+/* HOME STYLING */
 
+/* SIGN UP BUTTON STYLING */
 .signIn {
 	color:white;
 	text-decoration: underline;
+	
 	
 }
 .signIn:hover {
@@ -142,7 +144,7 @@ p {
     display: table;
     width: 100%;
     height: auto;
-    padding: 00px 0;
+    padding: 100px 0;
     text-align: center;
     color: white;
     background: url('/resources/background.jpg') no-repeat bottom center scroll;
@@ -305,7 +307,6 @@ body {
 .navbar-right {
 	padding-top: 5px;
 }
-
 
 /* Styles for the Top Bar  ============================================================================= */
 
@@ -583,7 +584,7 @@ padding-left: 35px;
 	border-bottom-color: gray;
 	border-width: 1px;
 	margin-bottom: 10px;
-	margin-left: -10px;
+	margin-left: -9px;
 	padding-bottom: 3px;
 }
 
