--- a/client/views/home/topSection/topBar.html
+++ b/client/views/home/topSection/topBar.html
@@ -1,6 +1,6 @@
 <template name = "topBar"> 
     
-	<!--<nav class="navbar navbar-default" role="navigation">
+	<nav class="navbar navbar-default" role="navigation">
 		<div class = "container">
 			<div class="navbar-header">
 				{{>search}}		
@@ -9,7 +9,7 @@
 				{{> loginButtons }}
 			</ul> 	
 		</div>
-   </nav> -->
+   </nav>
     
 
 </template>
