before I mess something up

--- a/client/views/listings/listingPage/postItem.html
+++ b/client/views/listings/listingPage/postItem.html
@@ -1,5 +1,6 @@
 <template name="postItem">
-	<div class="post">
+   <!-- Since our animation (from sorting and limiting number displayed) will affect our DOM element’s CSS attributes and classes, we’ll add a dynamic {{attributes}} helper. -->
+	<div class="post" {{attributes}}>
 		<div class="post-content">
 			<h3><a href="{{pathFor 'postPage'}}">{{title}}</a></h3>
 		</div>
