--- a/client/views/listings/listingPage/listingPage.html
+++ b/client/views/listings/listingPage/listingPage.html
@@ -1,33 +1,41 @@
 <template name="listingPage">
 
-{{#each listingItem}}
+  {{> listingPageHeader}}
+
+  <!--main-->
+  <div class="container">
+   <div class="row">
+
+    {{>leftBarListingPage}}
+
+    <!--right-->
+    <div class="col-md-9">
+      <h2 id="sec1"> 
+        <div class="listingPageHeader">
+         <div style= "text-transform:capitalize">Latest Listings in</div> 
+         <div class="smallListings">&nbsp;</div>
+         {{title}} </div> 
+       </h2>
 
 
-{{> listingPageHeader}}
+       <p>
+        <div class="posts"> 
+          {{#each postsWithRank}}
+           {{> postItem}}
+          {{/each}}
 
-<!--main-->
-<div class="container">
-	<div class="row">
-   
-      {{>leftBarListingPage}}
-   
-      <!--right-->
-      <div class="col-md-9">
-        <h2 id="sec1"> 
-          <div class="listingPageHeader">
-           <div style= "text-transform:capitalize">Latest Listings in</div> 
-           <div class="smallListings">&nbsp;</div>
-		   	 {{title}} </div> 
-        </h2>
-        <p>
-          {{>postsList}}
-        </p>
-  
-        </div><!--/right-->
-  	</div><!--/row-->
+          {{#if nextPath}}
+          <a class="load-more" href="{{nextPath}}">Load more</a>
+          {{/if}}
+        </div>
+      </p>
+
+
+
+    </div><!--/right-->
+  </div><!--/row-->
 </div><!--/container-->
 
 
 
-{{/each}}
 </template>
