--- a/client/views/listings/listingPage/postsList.html
+++ b/client/views/listings/listingPage/postsList.html
@@ -1,5 +1,11 @@
 <template name="postsList">
-  
+    {{#each postsWithRank}}
+      {{> postItem}}
+    {{/each}}
+
+    {{#if nextPath}}
+          <a class="load-more" href="{{nextPath}}">Load more</a>
+    {{/if}}
 </template>
 
 
